# backend/internal/api/oas_response_encoders_gen.go
@@ -581,37 +581,6 @@ func encodeGetPendingOrgsResponse(response GetPendingOrgsRes, w http.ResponseWri
 	}
 }
 
-func encodeListGithubWebhooksResponse(response ListGithubWebhooksRes, w http.ResponseWriter, span trace.Span) error {
-	switch response := response.(type) {
-	case *WebhookListResponse:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(200)
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *Error:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(401)
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	default:
-		return errors.Errorf("unexpected response type: %T", response)
-	}
-}
-
 func encodeListInvitationsResponse(response ListInvitationsRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *InvitationListResponse:
